# Simple-Rust

./: Cargo.toml  README.md  asdf.ro
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: basic.rs  eval.rs  eval_gen.rs  eval_str.rs  fuzz_syntax.rs
fuzz/src/: lib.rs  script_generator.rs
src/: arena.rs  bit_set.rs  id_vec.rs  lib.rs  main.rs  modules.rs
src/asm/: mem.rs  mod.rs  reg.rs
src/codegen/: mod.rs
src/data/: id_set.rs  id_vec.rs  mod.rs
src/datastructures/: arena.rs  id.rs  id_set.rs  id_vec.rs  mod.rs  random.rs
src/elf/: data_types.rs  header.rs  mod.rs  relocation.rs  section.rs  string_table.rs  symbol_table.rs
src/hir/: dominators.rs  id.rs  location.rs  lower.rs  mod.rs  node.rs  operation.rs  scopes.rs
src/lir/: mod.rs  stack_slots.rs  types.rs
src/sea_of_nodes/: global_code_motion.rs  graph_evaluator.rs  graph_visualizer.rs  ir_printer.rs  location.rs  mod.rs  nodes.rs  parser.rs  soup.rs  tests.rs  types.rs
src/soup/: graph_visualizer.rs  location.rs  mod.rs  nodes.rs  soup.rs  tests.rs
src/syntax/: ast.rs  formatter.rs  mod.rs  parser.rs  tokenizer.rs
tests/: integration_tests.rs
tests/test_0001_return_0/: log.txt  main.ro  mod.rs
tests/test_0002_return_42/: log.txt  main.ro  mod.rs
tests/test_0003_return_addition/: log.txt  main.ro  mod.rs
tests/test_0004_function_call/: log.txt  main.ro  mod.rs
tests/test_0005_two_statements/: log.txt  main.ro  mod.rs
tests/test_0006_params_and_args/: log.txt  main.ro  mod.rs
tests/test_0007_call_putchar/: log.txt  main.ro  mod.rs
tests/test_0009_if/: log.txt  (+2 more)
(+107 files in other folders)
