[package]
name = "ro"
version = "0.1.0"
authors = ["Robert Obkircher <robert.obkircher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
iced-x86 = { version = "1.18.0", features = ["code_asm"] }