[package]
name = "ro-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ro]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_syntax"
path = "fuzz_targets/fuzz_syntax.rs"
test = false
doc = false
bench = false
