[package]
name = "simple-rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.simple-rust]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "basic"
path = "fuzz_targets/basic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eval_str"
path = "fuzz_targets/eval_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eval_gen"
path = "fuzz_targets/eval_gen.rs"
test = false
doc = false
bench = false
